# Vehicle-Management

./: CMakeLists.txt  CMakeLists.txt.user.e436ee5  README.md  addcar.cpp  addcar.h  addcar.ui  addcustomer.cpp  addcustomer.h  addcustomer.ui  assigncar.cpp  assigncar.h  assigncar.ui  editcar.cpp  editcar.h  editcar.ui  editcustomer.cpp  editcustomer.h  editcustomer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  removecar.cpp  removecar.h  removecar.ui  removecustomer.cpp  removecustomer.h  removecustomer.ui  seachcar.cpp  seachcar.h  seachcar.ui  searchcustomer.cpp  searchcustomer.h  searchcustomer.ui  unassigncar.cpp  unassigncar.h  unassigncar.ui
